have add delete images route
